--- a/style.css
+++ b/style.css
@@ -51,16 +51,42 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 100px 200px;
+    padding: 60px 280px 100px;
+    gap: 20px;
 }
 
 .card-section {
     display: flex;
+    justify-content: space-evenly;
+}
+
+.card img {
+    width: 150px;
+    height: 160px;
+    border: 4px solid #3882f6;
+    border-radius: 25px;
+    margin-bottom: 10px;
 }
 
 .section3 {
     display: flex;
     box-sizing: content-box;
-    padding: 100px 200px;
+    padding: 100px 280px;
     background-color: #e5e7eb;
+}
+
+blockquote {
+    color: #1f2937ba;
+    font-size: 36px;
+    font-weight: lighter;
+    font-style: italic;
+}
+cite {
+    display: flex;
+    justify-content: right;
+    padding-right: 24px;
+    font-size: 22px;
+    font-weight: bold;
+    font-style: normal;
+    color: #1f2937ec;
 }
