--- a/style.css
+++ b/style.css
@@ -92,5 +92,10 @@ cite {
     font-size: 22px;
     font-weight: bold;
     font-style: normal;
-    color: #1f2937ec;s
+    color: #1f2937ec;
+}
+
+.section4 {
+    display: flex;
+    flex-direction: column;
 }
