--- a/style.css
+++ b/style.css
@@ -27,9 +27,15 @@
 
 .section1 {
     display: flex;
+    justify-content: center;
+    align-items: center;
     box-sizing: content-box;
-    padding: 100px 160px;
+    padding: 100px 160px 120px;
     background-color: #1f2937;
+}
+
+.s1-container {
+    width: 440px;
 }
 
 .s1-container h1 {
@@ -42,20 +48,16 @@
     color: #e5e7eb;
 }
 
-.s1-container button {
-    
-}
-
 .section1 img {
     height: 240px;
-    width: 540px;
+    width: 500px;
 }
 
 .section2 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 60px 280px 100px;
+    padding: 60px 300px 100px;
     gap: 28px;
 }
 
@@ -85,7 +87,7 @@
 .section3 {
     display: flex;
     box-sizing: content-box;
-    padding: 100px 280px;
+    padding: 100px 300px;
     background-color: #e5e7eb;
 }
 
@@ -106,7 +108,7 @@ cite {
 }
 
 .section4 {
-    padding: 100px 280px;
+    padding: 100px 240px;
 }
 
 .s4-container {
