--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@
 .header {
     display: flex;
     justify-content: space-between;
-    padding: 0px 160px;
+    align-items: center;
+    padding: 0px 240px;
     background-color: #1f2937;
 }
 
@@ -68,6 +69,7 @@
 .card-section {
     display: flex;
     justify-content: space-evenly;
+    gap: 24px;
 }
 
 .card {
@@ -75,8 +77,8 @@
 }
 
 .card img {
-    width: 150px;
-    height: 160px;
+    width: 170px;
+    height: 180px;
     border: 4px solid #3882f6;
     border-radius: 25px;
     margin-bottom: 18px;
@@ -84,7 +86,7 @@
              -15px -15px 30px #ffffff;
 }
 
-.card:hover {
+.card img:hover {
     margin-top: -10px;
 }
 
